--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,10 +2,10 @@
 layout: archive
 ---
 
-<h1 class="archive__subtitle">{{ site.data.ui-text[site.locale].home_page | default: "Welcome to my site!" }}</h1>
+<h1 class="archive__subtitle">{{ site.data.ui-text[site.locale].home_page | default: "Welcome to my website!" }}</h1>
 
 <p class="lead mb-5"></p>
-<font size="4"> I'm a PhD student in Economics at The University of Chicago Booth School of Business working in several projects in the field of Labor and Industrial Organization in the context of the developing world.  </font>
+<font size="4"> Hi! I'm Stephy Riega, an undergraduate student of Economics at PUCP, Peru. My interests are in the field of Applied Microeconomics, Data Science, Labor, Education and Gender. Here you will find more about my research, code, proyects and (soon) my hobbies.  </font>
 <p class="lead mb-5"></p>
 
 <font size="4">You can reach me at: francocalle [at] chicagobooth [dot] edu, or find me on <a href="https://twitter.com/FrancoCalle/" target="_blank">Twitter</a>.</font>
