--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: archive
 <font size="4"> Hi! I'm Stephy Riega, an undergraduate student of Economics at PUCP, Peru. My interests are in the field of Applied Microeconomics, Data Science, Labor, Education and Gender. Here you will find more about my research, code, proyects and (soon) my hobbies.  </font>
 <p class="lead mb-5"></p>
 
-<font size="4">You can reach me at: francocalle [at] chicagobooth [dot] edu, or find me on <a href="https://twitter.com/FrancoCalle/" target="_blank">Twitter</a>.</font>
+<font size="4">You can reach me at: riega[dot] stephy [at] pucp [dot] edu [dot] pe , or find me on <a href="https://twitter.com/sriegae?t=-E5p7AOp4HKnJfDUdmgROQ&s=09" target="_blank">Twitter</a>.</font>
 <!-- <font size="4">For more information about me: <a href="https://www.dropbox.com/s/cykvv8sxauj2oyw/Resume%20-%20FC.pdf?dl=0">Download my CV</a>. -->
 <!-- {% for post in paginator.posts %}
   {% include archive-single.html %}
