--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: archive
 <h1 class="archive__subtitle">{{ site.data.ui-text[site.locale].home_page | default: "Welcome to my website!" }}</h1>
 
 <p class="lead mb-5"></p>
-<font size="4"> Hi! I'm Stephy Riega, an undergraduate student of Economics at PUCP, Peru. My interests are in the field of Applied Microeconomics, Data Science, Labor, Education and Gender. I have been a research intern at <a href="http://www.grade.org.pe/" target="_blank">GRADE</a> and a volunteer at <a href="https://economica.pe/" target="_blank">Economica</a>. Currently, I am a research inten at <a href="https://www.poverty-action.org/" target="_blank">IPA</a> and a research assitant volunteer at <a href="https://www.citymakerslab.com/en-construcci%C3%B3n" target="_blank">City Makers</a>. Here you will find more about my research, code, proyects and (soon) my hobbies.  </font>
+<font size="4"> Hi! I'm Stephy Riega, an undergraduate student of Economics at PUCP, Peru. My interests are in the field of Applied Microeconomics, Data Science, Labor, Education and Gender. I have been a research intern at <a href="http://www.grade.org.pe/" target="_blank">GRADE</a> and a volunteer at <a href="https://economica.pe/" target="_blank">Economica</a>. Currently, I am a research intern at <a href="https://www.poverty-action.org/" target="_blank">IPA</a> and a research assistant volunteer at <a href="https://www.citymakerslab.com/en-construcci%C3%B3n" target="_blank">City Makers</a>. Here you will find more about my research, code, proyects and (soon) my hobbies.  </font>
 <p class="lead mb-5"></p>
 
 <font size="4">You can reach me at: riega [dot] stephy [at] pucp [dot] edu [dot] pe, or find me on <a href="https://twitter.com/sriegae?t=-E5p7AOp4HKnJfDUdmgROQ&s=09" target="_blank">Twitter</a>.</font>
