--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,10 @@ layout: archive
 <h1 class="archive__subtitle">{{ site.data.ui-text[site.locale].home_page | default: "Welcome to my website!" }}</h1>
 
 <p class="lead mb-5"></p>
-<font size="4"> Hi! I'm Stephy Riega, an undergraduate student of Economics at PUCP, Peru. My interests are in the field of Applied Microeconomics, Data Science, Labor, Education and Gender. I have been a research intern at <a href="http://www.grade.org.pe/" target="_blank">GRADE</a> and a volunteer at <a href="https://economica.pe/" target="_blank">Economica</a>. Currently, I am a research intern at <a href="https://www.poverty-action.org/" target="_blank">IPA</a> and a research assistant volunteer at <a href="https://www.citymakerslab.com/en-construcci%C3%B3n" target="_blank">City Makers</a>. Here you will find more about my research, code, proyects and (soon) my hobbies.  </font>
+<font size="4"> Hi! I'm Stephy Riega, an undergraduate student of Economics at PUCP, Peru. My interests are in the field of Applied Microeconomics, Data Science, Labor, Education and Gender. I have been a research intern at <a href="http://www.grade.org.pe/" target="_blank">GRADE</a> and a volunteer at <a href="https://economica.pe/" target="_blank">Economica</a>. Currently, I am a Research Analyst at <a href="https://www.poverty-action.org/" target="_blank">IPA</a>. Here you will find more about my research, code, proyects and (soon) my hobbies.  </font>
+<p class="lead mb-5"></p>
+
+<font size="4"> Apart from Economics, I also like listening to music, reading and practicing water sports. I'm a big Taylor Swift, Bon Iver and Phoebe Bridgers fan. Magical realism and detective novels are the kind of books I prefer to read, Gabriel Garcia Marquez and Haruki Murakami are on the top of my favourite writers. Furthermore, I have been swimming since I can remember and recently I am taking surfing classes. </font>
 <p class="lead mb-5"></p>
 
 <font size="4">You can reach me at: riega [dot] stephy [at] pucp [dot] edu [dot] pe, or find me on <a href="https://twitter.com/sriegae?t=-E5p7AOp4HKnJfDUdmgROQ&s=09" target="_blank">Twitter</a>.</font>
@@ -15,3 +18,6 @@ layout: archive
 {% endfor %} -->
 
 {% include paginator.html %}
+
+### Contact
+You can reach me at: riega.stephy <kbd>[at]</kbd> pucp <kbd>[dot]</kbd> edu <kbd>[dot]</kbd> pe, or find me on [Twitter](https://twitter.com/sriegae?t=-E5p7AOp4HKnJfDUdmgROQ&s=09).
